- Syncs with Upstream Post v0.13.1 Updates
  * Misc Improvements (Skips items already in RefindPlus)
- Drops Switch to Graphics Mode on EFI Boot (When not Booting OpenCore)
  * Maintains default mode instead of switching to graphics mode when booting EFI loaders
- Improves APFS Remapping
  * Previously failed when using the 'ReScanAll' feature or when not running Apple Firmware
- Improves Device Handle Connection
  * Now always runs the connection process a minimum of two (2) times
  * This is because several links are only revealed after a first pass
  * Trades a typically imperceptible increase in boot time for improved stability and reliability
  * NB: The first pass is silent and is not logged


0.13.1.AB (02 Mar 2021):
- Fixes APFS ReMapping
  * APFS Containers were not excluded as should have been the case
- Fixes Hour Logging
  * Deviation from GetTime spec meant some log files were not in chronological order


0.13.1.AA (02 Mar 2021):
-----------------------
- Syncs with Upstream Post v0.13.1 Updates
  * Adds icon for Manjaro Linux
- Syncs with Upstream v0.13.1
  * Fixes bug that can cause issues with disabled manual boot stanza referencing unreadable volumes
  * Accounts for new upstream initial logging function (ignored by RefindPlus)
  * Records selected EFI-based reboot options in the PreviousBoot variable
  * Implements support for setting systemd's LoaderDevicePartUUID EFI variable
  * Re-interpretes partial icon scaling fix implemented upstream
- Syncs with Upstream v0.13.0
  * Limited to items that did not originate from RefindPlus (which are kept in their original form)
  * Does not adopt upstream reinterpretation of RefindPlus graphics protocol detection
  * This was implemented upstream in a new 'MyLibLocateProtocol' function
  * Maintains the maximum available screen resolution as the default screen resolution
  * Selected resolutions larger than screen size reported as possibility upstream have not been observed so far