@@ -5,6 +5,8 @@
   * Maintains default mode instead of switching to graphics mode when booting EFI loaders
 - Improves APFS Remapping
   * Previously failed when using the 'ReScanAll' feature or when not running Apple Firmware
+- Fixes Ignoring the Upstream 'max' Resolution Setting
+  * The setting was previously not ignored as was intended
 - Improves Device Handle Connection
   * Now always runs the connection process a minimum of two (2) times
   * This is because several links are only revealed after a first pass
